# aleph-testnets

./: .gitignore  .gitmodules  Justfile  manifesto.yml  pyproject.toml
.github/workflows/: deploy.yml  nightly.yml  pr-tests.yml
contracts/: foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: MockALEPH.sol  USDAleph.sol
deploy/: 001-create-scheduler-db.sql  001-update-ipfs-config.sh  config.yml.tpl  deploy.sh  docker-compose.local.yml  docker-compose.yml
docs/: tee-server.md
docs/superpowers/plans/: 2026-03-20-aleph-testnets-phase1.md  2026-03-26-nodestatus-integration.md  2026-06-01-instance-lifecycle-tests.md  2026-06-05-confidential-vm-tests.md
docs/superpowers/specs/: 2026-03-20-aleph-testnets-design.md  2026-03-26-nodestatus-integration-design.md  2026-06-01-instance-lifecycle-tests-design.md  2026-06-05-confidential-vm-test-design.md
scripts/: confidential-artifacts.sh  crn-up.sh  deploy-contracts.sh  fund-test-accounts.sh  local-up.sh  publish-settings-aggregate.sh  tee-reset.sh
scripts/confidential-image/: build_debian_image.sh  setup_debian_rootfs.sh
tests/: conftest.py  test_aggregates.py  test_balances.py  test_confidential.py  test_credits.py  test_files.py  test_instance_backup.py  test_instance_lifecycle.py  test_instances.py  test_messages.py  test_migration.py  test_nodes.py  test_posts.py  vm_helpers.py
