[project]
name = "aleph-testnets"
version = "0.1.0"
description = "Integration tests for Aleph Cloud testnets"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "pyyaml>=6.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
